--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <div class="container">
                     <div class="header-content d-flex flex-wrap align-items-center">
                         <div class="logo">
-                            <a href="index.html" title=""><img src="assets/img/logo.png" alt="" srcset="assets/img/01_Logo_2x.png 2x" /></a>
+                            <a href="index.html" title=""><img src="assets/img/logosd.png" alt="" srcset="assets/img/01_Logo_2x.png 2x" /></a>
                         </div>
                         <!--logo end-->
                         <ul class="contact-add d-flex flex-wrap">
@@ -151,7 +151,7 @@
                                 <div class="section-title">
                                     <h2>
                                         Welcome to<br />
-                                        <span>Shelly</span> School
+                                        <span>SDS Insan Pertiwi</span> School
                                     </h2>
                                     <p class="mw-100">
                                         Morbi vel augue et metus pellentesque lacinia eu non odio. Sed id purus urna. Maecenas ultrices ligula a nisi dictum tristique. Suspendisse potenti. Curabitur egestas ultrices sem, eu vestibulum leo
@@ -450,7 +450,7 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="widget widget-about">
-                                    <img src="assets/img/logo.png" alt="" />
+                                    <img src="assets/img/logosd.png" alt="" />
                                     <p>Vivamus porta efficitur nibh nec convallis. Vestibulum egestas eleifend justo. Ut tellus ipsum, accumsan</p>
                                 </div>
                                 <!--widget-about end-->
