--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="col-lg-7 col-md-7">
                                 <div class="banner-text wow fadeInLeft" data-wow-duration="1000ms">
                                     <h2>YAYASAN  <span>INSAN PERTIWI</span></h2>
-                                    <p style="font-size: 50px;">
+                                    <p class="col-lg-7 col-md-7" style="font-size: 50px;">
                                       TK & SD Insan Pertiwi
                                     </p>
                                     <form class="search-form">
