--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <div class="banner-text wow fadeInLeft" data-wow-duration="1000ms">
                                     <h2>YAYASAN  <span>INSAN PERTIWI</span></h2>
                                     <p class="col-lg-7 col-md-7" style="font-size: 50px;">
-                                      
+                                      TK & SD Insan Pertiwi
                                     </p>
                                     <form class="search-form">
                                         <input type="text" name="search" placeholder="Search Class" /> <button><i class="fa fa-search"></i></button>
